# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Fri Jul 28 2017 Sjoerd Mullender <sjoerd@acm.org>
- Compiled and released new jars: monetdb-jdbc-2.26.jar and updated jdbcclient.jar

* Thu Jul 13 2017 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected implementation of PreparedStatement method
   setObject(int parameterIndex, Object x, int targetSqlType, int scaleOrLength)
  for the case the targetSqlType is Types.CLOB.
  See also: https://www.monetdb.org/bugzilla/show_bug.cgi?id=6349
